--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <section class="tab-group bottom-tabs">
         <div class="tab-nav">
-          <button class="tab-btn" data-tab="b1">Tab 1</button>
+          <button class="tab-btn" data-tab="b1">Tape Deck</button>
           <button class="tab-btn" data-tab="b2">Tab 2</button>
           <button class="tab-btn" data-tab="b3">Tab 3</button>
           <button class="tab-btn" data-tab="b4">Tab 4</button>
@@ -96,7 +96,7 @@
           <button class="tab-btn" data-tab="b6">Tab 6</button>
         </div>
 
-        <div class="tab-content hidden" data-tab="b1">Content for Tab 1</div>
+        <div class="tab-content hidden" data-tab="b1">Always on recorder.</div>
         <div class="tab-content hidden" data-tab="b2">Content for Tab 2</div>
         <div class="tab-content hidden" data-tab="b3">Content for Tab 3</div>
         <div class="tab-content hidden" data-tab="b4">Content for Tab 4</div>
